tests/valid/import/recursive.rs
/*
executionExitCode: 9
*/

some_function @ std::test::import::recursive1;

main(): i32 {
    return some_function();
}
