tests/invalid/import/nonexistent_file.rs
/*
compilationExitCode: 1
*/

i_do_not_exist_either @ std::test::import::i_will_never_exist_and_that_is_good;

main(): i32 {
    return 6;
}
